<resources>
    <string name="app_name">练字</string>
    <string name="testString">在一个广场上,人挤人,\n你不知道方向在哪里,但如果你站得高一点,看得远一点,\n就知道周遭的种种拥挤对你来说其实毫无意义。——《自由在高处》</string>
    <string name="testString_1">在一个广场上,人挤人,你不知道方向在哪里,但如果你站得高一点,看得远一点,就知道周遭的种种拥挤对你来说其实毫无意义。——《自由在高处》</string>

    <string name="mainTopStatisticsWordNo">累计练字/字</string>
    <string name="mainTopStatisticsTime">累计练习/分钟</string>
    <string name="mainTopStatisticsDay">持续练习/天</string>
    <string name="mainPracticeWord">单字练习</string>
    <string name="mainPracticeSent">名句练习</string>
    <string name="mainPracticeSearch">搜索练习</string>
    <string name="mainPracticeToday">今日推荐</string>
    <string name="mainTaskToday">今日任务</string>

    <string name="mainBtStart">开始练习</string>

</resources>
