<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <View
        android:id="@+id/acMainViewTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_180"
        android:background="@drawable/img_main_top_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/acMainTvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/acMainTvStatisticsWordNumber"
        style="@style/styleMainStatisticsNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acMainTvAppName" />

    <TextView
        android:id="@+id/acMainTvStatisticsTime"
        style="@style/styleMainStatisticsNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_90"
        android:text="0"
        app:layout_constraintEnd_toStartOf="@+id/acMainTvStatisticsWordNumber"
        app:layout_constraintTop_toTopOf="@+id/acMainTvStatisticsWordNumber" />

    <TextView
        android:id="@+id/acMainTvStatisticsContinueDay"
        style="@style/styleMainStatisticsNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_90"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/acMainTvStatisticsWordNumber"
        app:layout_constraintTop_toTopOf="@+id/acMainTvStatisticsWordNumber" />

    <TextView
        style="@style/styleMainStatisticsInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/mainTopStatisticsTime"
        app:layout_constraintEnd_toEndOf="@+id/acMainTvStatisticsTime"
        app:layout_constraintStart_toStartOf="@+id/acMainTvStatisticsTime"
        app:layout_constraintTop_toBottomOf="@+id/acMainTvStatisticsTime" />

    <TextView
        style="@style/styleMainStatisticsInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/mainTopStatisticsWordNo"
        app:layout_constraintEnd_toEndOf="@+id/acMainTvStatisticsWordNumber"
        app:layout_constraintStart_toStartOf="@+id/acMainTvStatisticsWordNumber"
        app:layout_constraintTop_toBottomOf="@+id/acMainTvStatisticsWordNumber" />

    <TextView
        style="@style/styleMainStatisticsInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/mainTopStatisticsDay"
        app:layout_constraintEnd_toEndOf="@+id/acMainTvStatisticsContinueDay"
        app:layout_constraintStart_toStartOf="@+id/acMainTvStatisticsContinueDay"
        app:layout_constraintTop_toBottomOf="@+id/acMainTvStatisticsContinueDay" />


    <TextView
        android:id="@+id/acMainViewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/mainTaskToday"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acMainViewTop" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/acMainRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dp_10"
        app:layout_constraintBottom_toTopOf="@+id/acMainBtStart"
        app:layout_constraintTop_toBottomOf="@+id/acMainViewTask" />

    <Button
        android:id="@+id/acMainBtStart"
        style="@style/DefaultBt"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_36"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/mainBtStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
